# sovereignagent

./: .env.example  .gitignore  .replit  PhantomOperatorCore.js  README.md  index.html  package-lock.json  package.json  requirements.txt  test.js
.github/workflows/: superfluid-test.yml
agents/: BreachAgent.js  BrokerAgent.js  MetadataAgent.js  SearchAgent.js
middleware/: security.js
operators/: OrchestratorOperator.js
scripts/: register.js  registerAgent.js  solana-invoke.js
services/: RagService.js  RegistryService.js  SkillRegistryService.js  X402Service.js
solana/: README.md
solana/programs/phantom_operator/: Cargo.toml
solana/programs/phantom_operator/src/: lib.rs
solana/scripts/: build.sh  check-solana.sh  deploy.sh
src/search_agent/: search_agent.py
